# AIcheatSDK

./: CMakeLists.txt  README.md  build.bat  build.sh
include/: input.hpp  source.hpp  types.hpp
source/: source.cpp
